// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers->user Should handle USER_LOG_IN_FAIL 1`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "created": null,
    "csrfToken": null,
    "expiresIn": null,
    "refreshToken": null,
    "role": "USER_ROLE_ANONYMOUS",
  },
  "error": undefined,
  "loading": false,
  "uid": null,
  "username": null,
}
`;

exports[`reducers->user Should handle USER_LOG_IN_LOADING 1`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "created": null,
    "csrfToken": null,
    "expiresIn": null,
    "refreshToken": null,
    "role": "USER_ROLE_ANONYMOUS",
  },
  "error": null,
  "loading": true,
  "uid": null,
  "username": null,
}
`;

exports[`reducers->user Should handle USER_LOG_IN_SUCCESS 1`] = `
Object {
  "authentication": Object {
    "accessToken": "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImp0aSI6IjM3YWYyODU0NDU5ZGU1NTRjNjEzOTkwY2VjM2I4MDM5NjZjZTMyNjg2MjFhMDMwYmIyNzZmOThkNjY1OWYzMzAxZWE2ODA1NzBkOGQ4ZDU4In0.eyJhdWQiOiIxNmIwZWQ4Ny03MTE2LTQwZDItOWIyNi0zNTRhZjNiMmRlYjMiLCJqdGkiOiIzN2FmMjg1NDQ1OWRlNTU0YzYxMzk5MGNlYzNiODAzOTY2Y2UzMjY4NjIxYTAzMGJiMjc2Zjk4ZDY2NTlmMzMwMWVhNjgwNTcwZDhkOGQ1OCIsImlhdCI6MTUyNzY5ODMwMCwibmJmIjoxNTI3Njk4MzAwLCJleHAiOjE1Mjc3MjgzMDAsInN1YiI6IjEiLCJzY29wZXMiOlsiYXV0aGVudGljYXRlZCIsImVkaXRvciJdfQ.WfaJ34VLxwS2tHaivfj8zBdf3ToV5LUWMPrjhoYVvkB9vwboGcQKk0pFYk8VSVlyDj5BiwzUQy5t5DXkEFlTv4qcRUoXvmcYbUTbVYQNSogLwiICCa7eEDNyFeaD7sBje2xFCvs8Osb2RTo-nx2SghY0qVziz1ZSNfApyt6ZDZwrnUexdWkV9Mr0rGy6ZUYmv3mCe4wQQIMDGFEuqrikZ00Ov7GkN1HSvNDzgN8SEeQe6trQ_7EgHYXnNywEyCzwe0zdYGy7b7cBhlul453GCW3jp-Y5ZLwY_SEjW8tRSpjCupbQKAWu3Zw92xkpgI7Nc4AkyuQqVepwp0kWzYk0ew",
    "created": 1527698343501,
    "csrfToken": "test",
    "expiresIn": 3000,
    "refreshToken": "test",
    "role": "USER_ROLE_EDITOR",
  },
  "error": null,
  "loading": false,
  "uid": "1",
  "username": null,
}
`;

exports[`reducers->user Should handle USER_LOG_OUT_SUCCESS 1`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "created": null,
    "csrfToken": null,
    "expiresIn": null,
    "refreshToken": null,
    "role": "USER_ROLE_ANONYMOUS",
  },
  "error": null,
  "loading": false,
  "uid": null,
  "username": null,
}
`;

exports[`reducers->user Should handle USER_SET_ROLE_SUCCESS 1`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "created": null,
    "csrfToken": null,
    "expiresIn": null,
    "refreshToken": null,
    "role": "USER_ROLE_EDITOR",
  },
  "error": null,
  "loading": false,
  "uid": null,
  "username": null,
}
`;

exports[`reducers->user Should return the initial state by default 1`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "created": null,
    "csrfToken": null,
    "expiresIn": null,
    "refreshToken": null,
    "role": "USER_ROLE_ANONYMOUS",
  },
  "error": null,
  "loading": false,
  "uid": null,
  "username": null,
}
`;
